# Ninjasm

./: DOCUMENTATION_GUIDE.md  README.md  pyproject.toml  setup.py
examples/classes/: class.nja
examples/helloworld/: helloworld.nja
ninjasm/: __init__.py  asm.py  errors.py  flat.py  generator.py  parser.py  preprocessor.py  test_ninjasm.py
test/: test_ninjasm.py
test/atassemblytime/: att.asm  att.nja  att.py
test/classes/: class.py
test/helloworld/: helloworld.asm  helloworld.nja  helloworld.py
test/mapping/: mapping.asm  mapping.py
tests/: test_asm.py  test_preprocessor_generator_flat.py
