[tool.poetry]
name = "ninjasm"
version = "0.1.0"
description = ""
authors = ["iopi <lionel.auroux@gmail.com>"]
readme = "README.md"
packages = [{include = "ninjasm"}]
include = [{path="test", format=["sdist", "wheel"]}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
capstone = "^4.0.2"
keystone-engine = "^0.9.2"
unicorn = "^2.0.1"

[tool.poetry.scripts]
ninjasm = "ninjasm:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
