[tool.poetry]
name = "ninjasm"
version = "0.2.0"
description = "Python + Assembly metaprogramming language"
authors = ["iopi <lionel.auroux@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/LionelAuroux/Ninjasm"
repository = "https://github.com/LionelAuroux/Ninjasm"
documentation = "https://github.com/LionelAuroux/Ninjasm/blob/main/README.md"
keywords = ["assembly", "nasm", "metaprogramming", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Assemblers",
    "Programming Language :: Assembly",
]
packages = [{include = "ninjasm"}]
include = [
    {path = "test", format = ["sdist", "wheel"]},
    {path = "tests", format = ["sdist", "wheel"]},
    {path = "README.md", format = ["sdist", "wheel"]},
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
# IMPORTANT: Capstone 5.x ne dépend plus de distutils
capstone = "^5.0.1"
keystone-engine = "^0.9.2"
# Unicorn 2.x compatible Python 3.13
unicorn = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
ipython = "^8.20.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.scripts]
ninjasm = "ninjasm:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests", "test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["ninjasm"]
omit = [
    "*/tests/*",
    "*/test/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
